[package]
name = "cubeos-error"
version = "0.1.0"
authors = ["Patrick Oppel <patrick.oppel94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.2"
serde = {version = "1.0", features = ["derive"]}
bincode = { git = "ssh://git@github.com/Cube-OS/bincode.git", branch = "v1.x"}